force-app/main/default/objects/Campaign/fields/Client_Contact_Main__c.field-meta.xml
<CustomField>
    <fullName>Client_Contact_Main__c</fullName>
    <label>Client Contact Main</label>
    <type>TextArea</type>
</CustomField>