force-app/main/default/objects/Campaign/fields/Deposit_Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Invoice_Number__c</fullName>
    <label>Deposit Invoice Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>