force-app/main/default/objects/Campaign/fields/Facilitator_2__c.field-meta.xml
<CustomField>
    <fullName>Facilitator_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Facilitator 2</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Campaigns (Facilitator 2)</relationshipLabel>
    <relationshipName>Campaigns1</relationshipName>
    <type>Lookup</type>
</CustomField>