force-app/main/default/objects/Campaign/fields/Facilitator__c.field-meta.xml
<CustomField>
    <fullName>Facilitator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Facilitator</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Campaigns</relationshipLabel>
    <relationshipName>Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>