force-app/main/default/objects/Campaign/fields/Final_Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Final_Invoice_Number__c</fullName>
    <label>Final Invoice Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>