force-app/main/default/objects/Campaign/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <label>Notes</label>
    <length>130000</length>
    <type>Html</type>
</CustomField>