force-app/main/default/objects/Campaign/fields/Targeted_Audience__c.field-meta.xml
<CustomField>
    <fullName>Targeted_Audience__c</fullName>
    <label>Targeted Audience</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Old</fullName>
            </value>
            <value>
                <fullName>ECM</fullName>
            </value>
            <value>
                <fullName>Healthcare</fullName>
            </value>
            <value>
                <fullName>Project Management</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>