force-app/main/default/objects/Campaign/fields/Upload_Date__c.field-meta.xml
<CustomField>
    <fullName>Upload_Date__c</fullName>
    <label>Upload Date</label>
    <length>10</length>
    <type>Text</type>
</CustomField>