force-app/main/default/objects/Campaign/fields/Venue__c.field-meta.xml
<CustomField>
    <fullName>Venue__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Venue</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Campaigns (Venue)</relationshipLabel>
    <relationshipName>Campaigns1</relationshipName>
    <type>Lookup</type>
</CustomField>