force-app/main/default/objects/Campaign/fields/X18_Digit_ID_ANZ__c.field-meta.xml
<CustomField>
    <fullName>X18_Digit_ID_ANZ__c</fullName>
    <description>This is the matching ID for the ANZ campaign</description>
    <label>18 Digit ID ANZ</label>
    <length>18</length>
    <type>Text</type>
</CustomField>