force-app/main/default/objects/Campaign/listViews/Fab5_Campaigns.listView-meta.xml
<ListView>
    <fullName>Fab5_Campaigns</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.ACTIVE</columns>
    <columns>CAMPAIGN.NUM_CONTACTS</columns>
    <columns>CAMPAIGN.NUM_OPPORTUNITIES</columns>
    <columns>CAMPAIGN.NUM_WON_OPPORTUNITIES</columns>
    <columns>AMOUNT_ALL</columns>
    <columns>AMOUNT_WON</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PARENT_NAME</field>
        <operation>equals</operation>
        <value>Fab5 2014</value>
    </filters>
    <label>Fab5 Campaigns</label>
</ListView>